[package]
name = "ow2_pubsub_broker"
version = "0.2.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
env_logger = "0.10.0"
futures-util = "0.3.26"
google-cloud-default = { version = "0.1.0", default-features = false, features = ["pubsub", "rustls-tls"] }
google-cloud-gax = "0.13.0"
google-cloud-googleapis = "0.7.0"
google-cloud-pubsub = "0.13.0"
lazy_static = "1.4.0"
log = "0.4.17"
rand = "0.8.5"
uuid =  { version = "1.3.0", features = [ "v4" ] }
